<resources>
    <string name="app_name">Corona watch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">المقالات</string>
    <string name="menu_gallery">التواصل الإجتماعي</string>
    <string name="menu_slideshow">فيديوهات و صور</string>

    <string name="home_second">Home Second</string>
    <string name="menu_download">تحميل</string>
    <string name="menu_health">المعلومات الحيوية</string>
    <string name="menu_alert">الإخطارات</string>
    <string name="menu_diagno">الحصول على تشخيص</string>
    <string name="menu_notification">التنبيهات</string>
    <string name="base_url">string</string>





    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة السر</string>
    <string name="createAnAccount">قم بانشاء حساب</string>
    <string name="logo">Logo</string>
    <string name="forgotPassWord">نسيت كلمة السر ؟</string>
    <string name="signUp">تسجيل الدخول</string>

</resources>
