<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_gallery3"
        android:name="com.example.coronawatch.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.coronawatch.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.coronawatch.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.coronawatch.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_download"
        android:name="com.example.coronawatch.ui.download.DownloadFragment"
        android:label="@string/menu_download"
        tools:layout="@layout/download_fragment" />

    <fragment
        android:id="@+id/info_per"
        android:name="com.example.coronawatch.ui.InfoFragment"
        android:label="المعلومات الخاصة"
        tools:layout="@layout/info_fragment" />

    <fragment
        android:id="@+id/nav_health"
        android:name="com.example.coronawatch.ui.health.HealthFragment"
        android:label="@string/menu_health"
        tools:layout="@layout/health_fragment" />
    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.example.coronawatch.ui.alert.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/alert_fragment" />
    <fragment
        android:id="@+id/nav_diagno"
        android:name="com.example.coronawatch.ui.diagno.DiagnoFragment"
        android:label="@string/menu_diagno"
        tools:layout="@layout/diagno_fragment" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.coronawatch.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/notification_fragment" />

</navigation>